infra/controllers/base/nginx/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
  # namespace: nginx
spec:
  ingressClassName: cilium
  rules:
  - host: nginx.ooooo.space
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: my-nginx-service
            port: 
              number: 80
